--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-color: #02000a;
+            background-color: #000000;
             margin: 0;
             padding: 0;
             display: flex;
@@ -30,7 +30,10 @@
             font-family: monospace;
             font-size: 16px;
             text-align: center;
-            color: #ffffff;
+            /*color: #ffffff;
+ 	    text-shadow: rgb(255, 170, 0) 0px 0px 2px;*/
+	    color: #ffffff;
+	    text-shadow: 0px 0px 5px rgba(0, 255, 0, 0.8), 0px 0px 10px rgba(0, 255, 0, 0.8), 0px 0px 20px rgba(0, 255, 0, 0.8); /* Glowing green text shadow */
             margin-bottom: 20px;
         }
         .projects, .about, .contact {
@@ -76,7 +79,7 @@
             background-color: #0a0a0a;
         }
         footer {
-            background-color: #02000a;
+            background-color: #000000;
             padding: 20px;
             text-align: center;
             color: #ffffff;
