--- a/index.html
+++ b/index.html
@@ -137,7 +137,9 @@
     <footer>
         <hr>
         Kovas McCann <script>document.write(new Date().getFullYear())</script><br>
-        <!--XMR Address: 8BtCmvu4XDJUQcLRHe7vTEgXTL8oWj7kDaPq6Eq3DmCbDA1LS8TFMP5KFctzk6t1XoinFjV7Fxg2ZLxwbhd6taqZBwBt9r7-->
+	<code>
+        XMR Address: 8BtCmvu4XDJUQcLRHe7vTEgXTL8oWj7kDaPq6Eq3DmCbDA1LS8TFMP5KFctzk6t1XoinFjV7Fxg2ZLxwbhd6taqZBwBt9r7
+ 	</code>   
     </footer>
 </body>
 </html>
