--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         .projects, .about, .contact {
             margin-top: 20px;
             padding: 20px;
-            background-color: Gray;
+            background-color: DarkGray;
             border-radius: 8px;
             box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
             color: #ffffff;
