--- a/index.html
+++ b/index.html
@@ -4,101 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kovas McCann</title>
-    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #000000;
-            margin: 0;
-            padding: 0;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            min-height: 100vh;
-            box-sizing: border-box;
-        }
-        .container {
-            width: 90%;
-            max-width: 600px;
-            margin: 0 auto;
-        }
-        .logo {
-            display: flex;
-            justify-content: center;
-            white-space: pre;
-            font-family: monospace;
-            font-size: 16px;
-            text-align: center;
-            /*color: #ffffff;
- 	    text-shadow: rgb(255, 170, 0) 0px 0px 2px;*/
-	    color: #ffffff;
-	    text-shadow: 0px 0px 5px rgba(0, 255, 0, 0.8), 0px 0px 10px rgba(0, 255, 0, 0.8), 0px 0px 20px rgba(0, 255, 0, 0.8); /* Glowing green text shadow */
-            margin-bottom: 20px;
-        }
-        .projects, .about, .contact {
-            margin-top: 20px;
-            padding: 20px;
-            background-color: #3b3b3b;
-            border-radius: 8px;
-            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-            color: #ffffff;
-            width: 100%;
-            box-sizing: border-box;
-        }
-        .projects h2, .about h2, .contact h2 {
-            color: #ffffff;
-            margin-top: 0;
-        }
-        .projects ul, .contact form {
-            list-style-type: none;
-            padding: 0;
-        }
-        .projects li {
-            margin-bottom: 10px;
-        }
-        .contact input, .contact textarea {
-            margin-bottom: 10px;
-            padding: 10px;
-            border: 1px solid #ddd;
-            border-radius: 4px;
-            background: #333;
-            color: #fff;
-            width: 100%;
-            box-sizing: border-box;
-        }
-        .contact button {
-            padding: 10px;
-            background-color: #000000;
-            color: #fff;
-            border: none;
-            border-radius: 4px;
-            cursor: pointer;
-        }
-        .contact button:hover {
-            background-color: #0a0a0a;
-        }
-        footer {
-            background-color: #000000;
-            padding: 20px;
-            text-align: center;
-            color: #ffffff;
-            width: 100%;
-            box-sizing: border-box;
-        }
-        img {
-            max-width: 100%;
-            height: auto;
-        }
-        @media (max-width: 768px) {
-            .logo {
-                font-size: 14px;
-            }
-            .projects, .about, .contact {
-                padding: 15px;
-            }
-        }
-    </style>
+    <link rel="favicon" type="image/x-icon" href="favicon.ico">
+    <link rel="stylesheet" type="text/css" href="../styles.css">
 </head>
 <body>
     <div class="container">
