--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" type="text/css" href="../styles.css">
 </head>
 <body>
+  <iframe src="bar.html" width="100%" height="90px" frameborder="0"></iframe>
     <div class="container">
         <div class="logo">
 888    d8P                                 888b     d888         .d8888b.                          
