--- a/bar.html
+++ b/bar.html
@@ -29,13 +29,13 @@ li {
 <center>
 <ul>
 <div class="bar">
-<li><a href="./index.html">Home</a></li>
+<li><a href="./index.html" target="_top">Home</a></li>
 </div>
 <div class="bar">
-<li><a href="./stonks.html">Ticker</a></li>
+<li><a href="./stonks.html" target="_top">Ticker</a></li>
 </div>
 <div class="bar">
-<li><a href="./Blog/index.html">Blog</a></li>
+<li><a href="./Blog/index.html" target="_top">Blog</a></li>
 </div>
 
 
