--- a/bar.html
+++ b/bar.html
@@ -1,45 +1,13 @@
-<style>
-a:link, a:visited, a:active {
-	color: #ffff;
-}
+<header style="top: 0; position: sticky; z-index: 10; background-color: #02000a; display: flex; justify-content: space-between; align-items: center; border-bottom: solid #ddd 1px; padding-bottom: 10px;">
+    <h4 style="margin: 0;">
+        <a href="" style="text-decoration: none; color: #7171d1;">Home</a>
+    </h4>
 
-a:hover {
-	color: #33cc33;
-}
+    <h4 style="margin: 0;">
+        <a href="/stonks.html" style="text-decoration: none; color: #7171d1;">Ticker</a>
+    </h4>
 
-
-ul {
- 	list-style-type: none;
-	margin: 4;
-	padding: 0;
-{
-
-li {
-	display: inline;
-}
-.bar {
-	width: 65px;
-	padding: 2px;
-	border: 3px solid gray;
-	margin: 4;
-	display: inline;
-}
-</style>
-
-<center>
-<ul>
-<div class="bar">
-<li><a href="./index.html" target="_top">Home</a></li>
-</div>
-<div class="bar">
-<li><a href="./stonks.html" target="_top">Ticker</a></li>
-</div>
-<div class="bar">
-<li><a href="./Blog/index.html" target="_top">Blog</a></li>
-</div>
-
-
-
-</center>
-
-<hr>
+    <h4 style="margin: 0;">
+        <a href="/Blog/index.html" style="text-decoration: none; color: #7171d1;">Blog</a>
+    </h4>
+</header>
