--- a/bar.html
+++ b/bar.html
@@ -1,13 +1,14 @@
-<header style="top: 0; position: sticky; z-index: 10; background-color: #02000a; display: flex; justify-content: space-between; align-items: center; border-bottom: solid #ddd 1px; padding-bottom: 10px;">
-    <h4 style="margin: 0;">
-        <a href="" style="text-decoration: none; color: #7171d1;">Home</a>
+<header style="top: 0; position: sticky; z-index: 10; background-color: #02000a; display: flex; justify-content: flex-start; align-items: center; border-bottom: solid #ddd 1px; padding-bottom: 10px;">
+    <h4 style="margin: 0; padding-right: 20px;">
+        <a href="" style="text-decoration: none; color: #7171d1;" target="_top">Home</a>
+    </h4>
+
+    <h4 style="margin: 0; padding-right: 20px;">
+        <a href="/stonks.html" style="text-decoration: none; color: #7171d1;" target="_top">Ticker</a>
     </h4>
 
     <h4 style="margin: 0;">
-        <a href="/stonks.html" style="text-decoration: none; color: #7171d1;">Ticker</a>
-    </h4>
-
-    <h4 style="margin: 0;">
-        <a href="/Blog/index.html" style="text-decoration: none; color: #7171d1;">Blog</a>
+        <a href="/Blog/index.html" style="text-decoration: none; color: #7171d1;" target="_top">Blog</a>
     </h4>
 </header>
+
