--- a/bar.html
+++ b/bar.html
@@ -1,6 +1,6 @@
 <header style="top: 0; position: sticky; z-index: 10; background-color: #02000a; display: flex; justify-content: flex-start; align-items: center; border-bottom: solid #ddd 1px; padding-bottom: 10px;">
     <h4 style="margin: 0; padding-right: 20px;">
-        <a href="#" style="text-decoration: none; color: #e0e0e0;" target="_top">Home</a>
+        <a href="/index.html" style="text-decoration: none; color: #e0e0e0;" target="_top">Home</a>
     </h4>
     <h4 style="margin: 0; padding-right: 20px;">
         <a href="/stonks.html" style="text-decoration: none; color: #e0e0e0;" target="_top">Ticker</a>
