--- a/index.html
+++ b/index.html
@@ -6,12 +6,14 @@
     <title>Kovas McCann</title>
     <link rel="icon" type="image/x-icon" href="favicon.ico">
     <link rel="stylesheet" type="text/css" href="../styles.css">
-    <iframe src="bar.html" width="100%" height="90px" frameborder="0"></iframe>
 </head>
 
 <body>
-	<div class="container">
-        <div class="logo">
+
+<iframe src="bar.html" width="100%" height="90px" frameborder="0" class="top-bar"></iframe>
+
+<div class="container">
+<div class="logo">
 888    d8P                                 888b     d888         .d8888b.                          
 888   d8P                                  8888b   d8888        d88P  Y88b                         
 888  d8P                                   88888b.d88888        888    888                         
@@ -20,8 +22,8 @@
 888  Y88b  888  888Y88  88P.d888888"Y8888b.888  Y8P  888888     888    888.d888888888  888888  888 
 888   Y88b Y88..88P Y8bd8P 888  888     X88888   "   888Y88b.   Y88b  d88P888  888888  888888  888 
 888    Y88b "Y88P"   Y88P  "Y888888 88888P'888       888 "Y8888P "Y8888P" "Y888888888  888888  888 
-        </div>
-	</div>
+</div>
+</div>
 
 <!--
         <center>
