--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <link rel="stylesheet" type="text/css" href="../styles.css">
 </head>
 
+<header>
 <iframe src="bar.html" width="100%" height="90px" frameborder="0" class="top-bar"></iframe>
+</header>
 
 <body>
 
