--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-<header>
+<header style="top: 0; position: sticky; z-index: 10; background-color: #02000a; display: flex; justify-content: space-betw    een; align-items: center; border-bottom: solid #ddd 1px; padding-bottom: 10px;">
 <iframe src="bar.html" width="100%" height="90px" frameborder="0" class="top-bar"></iframe>
 </header>
 
