--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
 <footer>
     <hr>
-        Kovas McCann <script>document.write(new Date().getFullYear())</script><br>
+        &#169; Kovas McCann <script>document.write(new Date().getFullYear())</script><br>
 	<code>
         XMR Address: 8BtCmvu4XDJUQcLRHe7vTEgXTL8oWj7kDaPq6Eq3DmCbDA1LS8TFMP5KFctzk6t1XoinFjV7Fxg2ZLxwbhd6taqZBwBt9r7
  	</code>   
