--- a/bar.html
+++ b/bar.html
@@ -79,6 +79,10 @@
         <h4>
             <a href="/Blog/index.html" target="_top">Blog</a>
         </h4>
+
+	<div style="margin-left: auto;">
+        <a href="mailto:kovasmccann@firemail.cc" target="_top">Contact</a>
+    	</div>
     </header>
 </body>
 </html>
