--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <div class="container">
 <div class="logo">
-888    d8P                                 888b     d888         .d8888b.                          
+<a href="https://github.com/kovasmccann" target="_blank" style="text-decoration: none; color: inherit; display: block; white-space: pre;">
 888   d8P                                  8888b   d8888        d88P  Y88b                         
 888  d8P                                   88888b.d88888        888    888                         
 888d88K     .d88b. 888  888 8888b. .d8888b 888Y88888P888 .d8888b888        8888b. 88888b. 88888b.  
@@ -23,6 +23,7 @@
 888  Y88b  888  888Y88  88P.d888888"Y8888b.888  Y8P  888888     888    888.d888888888  888888  888 
 888   Y88b Y88..88P Y8bd8P 888  888     X88888   "   888Y88b.   Y88b  d88P888  888888  888888  888 
 888    Y88b "Y88P"   Y88P  "Y888888 88888P'888       888 "Y8888P "Y8888P" "Y888888888  888888  888 
+</a>
 </div>
 </div>
 
